--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,14 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/*
 .DS_Store
+
 /build
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+
+/.idea/
+
