--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation 'io.coil-kt:coil-compose:2.2.2'
 
     //Hilt
     implementation "com.google.dagger:hilt-android:2.44"
@@ -83,6 +86,9 @@ dependencies {
     //Coroutines
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    //Navigation
+    implementation "androidx.navigation:navigation-compose:$rootProject.composeNavigationVersion"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
