--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,9 @@ android {
         versionName "1.0"
 
         buildConfigField  "String", "API_KEY", "\"863fa92794863e9533beb2a1c3912607\""
-        buildConfigField  "String", "HASH", "\"cd19bf94e87cdb7d6d53277f633b3bfc\""
+        buildConfigField  "String", "PRIVATE_KEY", "\"16f8758d0328462148c74f07ab19531e0c2224e4\""
         buildConfigField  "String", "BASE_URL", "\"https://gateway.marvel.com/v1/public/\""
+        //https://fe1d5c02-6122-4580-b002-6e36d8c23dab.mock.pstmn.io/
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -53,6 +54,8 @@ android {
 }
 
 dependencies {
+
+    def room_version = "2.4.3"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -96,4 +99,14 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+
+    //ROOM
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // To use Kotlin annotation processing tool (kapt)
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+
 }
