--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,17 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.26.5-rc'
 
 
+    // Koin main features for Android
+    implementation "io.insert-koin:koin-android:3.3.0"
+    // Java Compatibility
+    implementation "io.insert-koin:koin-android-compat:3.3.0"
+    // Jetpack WorkManager
+    implementation "io.insert-koin:koin-androidx-workmanager:3.3.0"
+    // Navigation Graph
+    implementation "io.insert-koin:koin-androidx-navigation:3.3.0"
+    // Jetpack Compose
+    implementation "io.insert-koin:koin-androidx-compose:3.3.0"
+
+
+
 }
